[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Themes/MenuWidgetTheme.tres" type="Theme" id=1]
[ext_resource path="res://Components/Menus/Button/Button.tscn" type="PackedScene" id=2]
[ext_resource path="res://Components/Menus/Menu/JoinMenu/JoinMenu.gd" type="Script" id=3]

[node name="JoinMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
margin_left = 510.0
margin_top = 200.0
margin_right = 780.0
margin_bottom = 458.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Panel"]
margin_top = 20.0
margin_right = 270.0
margin_bottom = 41.0
text = "Join Game"
align = 1

[node name="NameLabel" type="Label" parent="Panel"]
margin_left = 20.0
margin_top = 50.0
margin_right = 92.0
margin_bottom = 71.0
text = "Name:"

[node name="NameInput" type="LineEdit" parent="Panel"]
margin_left = 110.0
margin_top = 50.0
margin_right = 240.0
margin_bottom = 78.1967
text = "ClientPlayer"

[node name="HostLabel" type="Label" parent="Panel"]
margin_left = 20.0
margin_top = 90.0
margin_right = 92.0
margin_bottom = 111.0
text = "Host Ip:"

[node name="HostInput" type="LineEdit" parent="Panel"]
margin_left = 110.0
margin_top = 90.0
margin_right = 240.0
margin_bottom = 118.197
text = "127.0.0.1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PortLabel" type="Label" parent="Panel"]
margin_left = 20.0
margin_top = 130.0
margin_right = 92.0
margin_bottom = 151.0
text = "Port:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PortInput" type="LineEdit" parent="Panel"]
margin_left = 110.0
margin_top = 130.0
margin_right = 240.0
margin_bottom = 158.197
text = "5767"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JoinButton" parent="Panel" instance=ExtResource( 2 )]
margin_left = 178.0
margin_top = 184.0
margin_right = 242.0
margin_bottom = 224.448
text = "Join"

[node name="BackButton" parent="Panel" instance=ExtResource( 2 )]
margin_left = 98.0
margin_top = 184.0
margin_right = 162.0
margin_bottom = 224.448
text = "Back"
